assets/css/style.css
/* ... */
.cs_contact_form_wrapper label {
  font-weight: 500;
  color: var(--primary-color);
  font-family: var(--primary-font);
  margin-bottom: 8px;
}

.cs_contact_form_wrapper .cs_form_field,
.cs_contact_form_wrapper .tom_select {
  display: block;
  width: 100%;
  padding: 10px 16px;
  resize: none;
  outline: 0;
  border-radius: 8px;
  border: 1px solid var(--gray-color2);
}

.cs_contact_form_wrapper .cs_form_field:focus,
.cs_contact_form_wrapper .tom_select:focus {
  border-color: var(--dark-blue);
}

.cs_contact_form_wrapper .tom_select.focus {
  border-color: var(--dark-blue);
}

.cs_contact_form_wrapper .tom_select.focus .ts-control::after {
  transform: translateY(-50%) rotateX(180deg);
}

.cs_contact_form_wrapper .ts-control {
  padding: 0;
  border: 0;
  font-size: 16px;
  line-height: 1.63em;
}

.cs_contact_form_wrapper .ts-control::after {
  content: "\f078";
  position: absolute;
  right: 0;
  top: 50%;
  transform: translateY(-50%);
  pointer-events: none;
  font-size: 14px;
  font-family: "Font Awesome 7 Free";
  font-weight: 900;
  color: var(--primary-color);
  transition: all 0.3s ease;
}

.cs_contact_form_wrapper .ts-control input {
  min-width: 1rem;
  margin: 0 !important;
}

.cs_contact_form_wrapper .ts-dropdown {
  border-radius: 8px;
  border: 1px solid var(--gray-color2);
}

.cs_contact_form_wrapper .ts-dropdown .option {
  font-size: 16px;
  padding: 8px 16px;
  line-height: 1.63em;
}

.cs_contact_form_wrapper .ts-dropdown .option.selected,
.cs_contact_form_wrapper .ts-dropdown .option .active,
.cs_contact_form_wrapper .ts-dropdown .option:hover {
  color: var(--white-color);
  background-color: var(--dark-blue);
}

.cs_contact_form_wrapper .cs_btn_style_1 {
  width: 100%;
}

@media (max-width: 991px) {
  .cs_contact_form_wrapper {
    width: 100%;
    padding: 20px 16px;
  }
}

.cs_contact_info_wrapper {
  padding: 32px;
  height: 100%;
  width: min(100%, 595px);
  display: flex;
  flex-direction: column;
  gap: 24px;
}

.cs_contact_info_wrapper .cs_contact_info_list {
  margin-top: auto;
  margin-bottom: 0;
  padding: 0;
}

.cs_contact_info_wrapper .cs_contact_info_list li {
  margin-bottom: 20px;
}

.cs_contact_info_wrapper .cs_contact_info_list li:last-child {
  margin-bottom: 0;
}

.cs_contact_info_wrapper .cs_contact_info_list a:hover {
  color: var(--dark-blue);
}

@media (max-width: 991px) {
  .cs_contact_info_wrapper {
    width: 100%;
    padding: 20px 16px;
  }
}

/*==============================================================
  16. Iconbox
================================================================*/
.cs_iconbox_style_1 .cs_iconbox_icon {
  width: 52px;
  height: 52px;
}

.cs_iconbox_style_1 .cs_iconbox_icon img {
  transition: transform 1s cubic-bezier(0.25, 0, 0.25, 1.2);
}

.cs_iconbox_style_1:hover .cs_iconbox_icon img {
  transform: rotateY(360deg);
}

.cs_iconbox_style_2 {
  display: flex;
  gap: 24px;
  padding: 24px 0 24px 32px;
  position: relative;
  cursor: pointer;
}

.cs_iconbox_style_2 .cs_iconbox_icon {
  width: 32px;
  height: 32px;
  color: var(--primary-color);
  transition: all 0.5s ease;
}

.cs_iconbox_style_2 .cs_iconbox_title {
  transition: all 0.5s ease;
}

.cs_iconbox_style_2::before {
  content: "";
  position: absolute;
  width: 4px;
  height: 100%;
  left: 0;
  top: 0;
  transform: scale(0, 0);
  background-color: var(--dark-blue);
  transition: all 0.5s ease;
}

.cs_iconbox_style_2.active::before {
  transform: scale(1, 1);
}

.cs_iconbox_style_2.active .cs_iconbox_icon {
  color: var(--dark-blue);
}

.cs_iconbox_style_2.active .cs_iconbox_title {
  color: var(--dark-blue);
}

@media (max-width: 991px) {
  .cs_iconbox_style_2 {
    gap: 20px;
    padding: 16px 0 16px 24px;
  }
}

.cs_icon_wrapper_style_1 {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  gap: 50px;
}

@media (max-width: 1199px) {
  .cs_icon_wrapper_style_1 {
    gap: 30px 20px;
  }
}

@media (max-width: 767px) {
  .cs_icon_wrapper_style_1 {
    grid-template-columns: repeat(1, 1fr);
  }
}

.cs_iconbox_wrapper_style_2 {
  width: min(100%, 570px);
  position: relative;
}

.cs_iconbox_wrapper_style_2::before {
  content: "";
  width: 4px;
  height: 100%;
  background-color: var(--gray-color2);
  position: absolute;
  left: 0;
  top: 0;
}

.cs_steps_thumbnails_wrapper {
  padding-left: 65px;
}

@media (max-width: 991px) {
  .cs_steps_thumbnails_wrapper {
    padding-left: 0;
  }
}

/*==============================================================
 17. Posts and Post Details
================================================================*/
.cs_post_style_1 {
  padding: 20px;
}

.cs_post_style_1 .cs_post_thumbnail {
  display: block;
}

.cs_post_style_1 .cs_post_thumbnail img {
  display: block;
  width: 100%;
}

.cs_post_style_1 .cs_post_title:hover {
  color: var(--dark-blue);
}

.cs_post_style_1 .cs_post_meta_wrapper {
  display: flex;
  gap: 5px;
}

.cs_post_style_1 .cs_post_meta {
  position: relative;
}

.cs_post_style_1 .cs_post_meta:last-child {
  padding-left: 10px;
}

.cs_post_style_1 .cs_post_meta:last-child::before {
  content: "";
  width: 5px;
  height: 5px;
  position: absolute;
  left: 0;
  top: 15px;
  border-radius: 50%;
  background-color: currentColor;
}

.cs_post_style_1 .cs_post_btn {
  display: inline-flex;
  align-items: center;
  gap: 6px;
}

.cs_post_style_1 .cs_post_btn .cs_btn_arrow {
  width: 24px;
  overflow: hidden;
}

.cs_post_style_1 .cs_post_btn .cs_btn_arrow i {
  text-shadow: -20px 0px 0px currentColor;
  transform: translateX(1px);
  transition: all 0.4s ease;
}

.cs_post_style_1 .cs_post_btn:hover {
  color: var(--dark-blue);
}

.cs_post_style_1 .cs_post_btn:hover i {
  text-shadow: -8px 0px 0px currentColor;
  transform: translateX(8px);
}

@media (max-width: 991px) {
  .cs_post_style_1 {
    padding: 16px;
  }
}

.cs_post_style_2 {
  padding: 20px;
  display: flex;
  gap: 16px 24px;
}

.cs_post_style_2 .cs_post_thumbnail {
  display: block;
  width: 130px;
  flex: none;
}
/* ... */

